--- a/index.html
+++ b/index.html
@@ -10,37 +10,64 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>Interactive Data Dashboard</h1>
+        <h1>Data Visualization Dashboard</h1>
     </header>
-    
-    <div class="auth-container" id="authContainer">
-        <div class="auth-form">
-            <h2>*Login Form*</h2>
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input id="username" type="text" placeholder="Enter your username" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input id="Email" type="email" placeholder="Enter your email" required>
-            </div>
-            <div class="form-group">
-                <label for="contact">Contact</label>
-                <input id="contact" type="tel" placeholder="Enter your contact" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input id="password" type="password" placeholder="Enter your password" required>
-            </div>
-            <div class="form-actions">
-                <button id="loginBtn">Login</button>
-            </div>
-        </div>
+    <div class="welcome-container" id="welcomeContainer">
+        <img id="logo" src="logo.png.jpg" alt="Dashboard Logo">
+        <h2>Welcome to the Data Visualization Dashboard!</h2>
+        <p>Explore insightful data visualizations and interactive charts. Please log in or sign up to continue.</p>
+        <button onclick="goToAuthPage()">Continue</button>
     </div>
 
-   
+    <div class="auth-container" id="authContainer" style="display: none;">
+        <div class="auth-form" id="signupForm">
+            <h2 style="text-align: center;">*Signup Form*</h2>
+            <div class="form-group">
+                <label for="signupUsername">Username</label>
+                <input id="signupUsername" type="text" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="signupEmail">Email</label>
+                <input id="signupEmail" type="email" placeholder="Enter your email" required>
+            </div>
+            <div class="form-group">
+                <label for="signupPassword">Password</label>
+                <input id="signupPassword" type="password" placeholder="Enter your password" required>
+            </div>
+            <div class="form-actions">
+                <button onclick="signup()">Signup</button>
+            </div>
+            <br>
+            <div class="switch">
+                Already have an account? <a href="#" onclick="showLogin()">Login here</a>
+            </div>
+        </div>
+
+        <div class="auth-form" id="loginForm" style="display: none;">
+            <h2 style="text-align: center;">*Login Form*</h2>
+            <div class="form-group">
+                <label for="loginUsername">Username</label>
+                <input id="loginUsername" type="text" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input id="loginPassword" type="password" placeholder="Enter your password" required>
+            </div>
+            <div class="form-actions">
+                <button onclick="login()">Login</button>
+            </div>
+            <br>
+            <div class="switch">
+                Don't have an account? <a href="#" onclick="showSignup()">Signup here</a>
+            </div>
+        </div>
+
+        <div class="error" id="errorMessage"></div>
+    </div>
+
     <div class="container" id="dashboard" style="display: none;">
         <div class="filters">
             <div class="filter-group">
@@ -63,8 +90,8 @@
             </div>
         </div>
         <div class="filter-group button-group">
-            <button class="apply-button" id="applyFiltersBtn">Apply Filters</button>
-            <button class="cancel-button" id="cancelFiltersBtn">Cancel</button>
+            <button class="apply-button" id="applyFiltersBtn" onclick="applyFilters()">Apply Filters</button>
+            <button class="cancel-button" id="cancelFiltersBtn" onclick="cancelFilters()">Cancel</button>
         </div>
         <div class="charts">
             <div class="chart-container">
@@ -75,11 +102,19 @@
             </div>
         </div>
     </div>
-   
+
     <div id="logoutContainer" class="logout" style="display: none;">
-        <button id="logoutBtn">Logout</button>
+        <button id="logoutBtn" onclick="logout()">Logout</button>
     </div>
+
+    <script>
+        function goToAuthPage() {
+            document.getElementById('welcomeContainer').style.display = 'none';
+            document.getElementById('authContainer').style.display = 'block';
+        }
+    </script>
 
     <script src="script.js"></script>
 </body>
+
 </html>
