--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <div id="logoutContainer" class="logout" style="display: none;">
-        <button id="logoutBtn" onclick="logout()">Logout</button>
+        <button id="logoutBtn">Logout</button>
     </div>
 
     <script>
